--- a/client/package.json
+++ b/client/package.json
@@ -44,6 +44,7 @@
     "zustand": "^4.5.7"
   },
   "devDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.44.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
